fix header color flicker

--- a/components/ProductView/ProductView.module.css
+++ b/components/ProductView/ProductView.module.css
@@ -5,6 +5,7 @@
   z-index: 100;
   padding: 40px 0;
   min-height: 100vh;
+  transition: all 0.8s ease-in-out;
 }
 
 .product-view-title .product-title {
@@ -17,6 +18,9 @@
 .product-view .close-button {
   width: 30px;
   height: 30px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .close-button img {
@@ -92,6 +96,18 @@
   scroll-snap-type: x mandatory;
   -webkit-overflow-scrolling: touch;
 } */
+
+.open {
+  opacity: 1;
+}
+
+.close {
+  opacity: 0;
+}
+
+.fade-in-out {
+  transition: all 0.5s ease-out;
+}
 
 .product-images img {
   height: 35vw;
